src/components/BehaviorPanel/style.module.css
.form {
	display: grid;
	grid-template-columns: 1fr;
	grid-auto-rows: 1fr 6fr;
	margin: 2rem 5rem;
	justify-items: start;
	align-items: baseline;
	height: fit-content;
	width: max(50vw, 50rem);
	position: relative;
}

.label {
	font-weight: var(--font-weight-bold);
	font-size: 0.875rem;
	text-transform: uppercase;
	letter-spacing: 0.29em;
	word-spacing: 0.29em;
	align-self: end;
	margin-bottom: 0.2rem;
}

.input {
	width: 100%;
	font-family: var(--font-mono);
	font-weight: var(--font-weight-light);
	box-sizing: border-box;
	border: 2px solid var(--color-item-shadow);
	background: var(--color-options-form-input);
	box-shadow: 4px 4px 0 0 var(--color-options-form-input-box-shadow) inset;
	height: 3rem;
	font-size: 1.7rem;
	padding: 0.5rem 2.2rem 0.5rem 0.5rem;
	transition: all 0.1s ease-in;
}

.input:focus,
.input:active {
	outline: none;
	box-shadow: 4px 4px 0 0 var(--color-item-shadow);
}

.input-container {
	width: 100%;
	position: relative;
	transition: all 0.1s ease-in;
}

.input-container:has(.input:focus),
.input-container:has(.input:active) {
	transform: translate(-0.1rem, -0.1rem);
}

.tooltip {
	position: absolute;
	right: 0;
	top: 0.35rem;
	font-size: 2rem;
	opacity: 0.5;
	padding: 0.1rem 0.7rem 0.1rem 0.5rem;
	cursor: help;
}

.tooltip-text {
	visibility: hidden;
	max-width: 16rem;
	border: 2px solid var(--color-item-shadow);
	text-align: center;
	padding: 1rem;
	position: absolute;
	z-index: 250;
	top: 1.5rem;
	right: 0.7rem;
	font-size: 1rem;
	font-weight: var(--font-weight-light);
	background-color: white;
	opacity: 0;
	transition: all 0.2s ease-in;
	cursor: help;
}

.tooltip:hover + .tooltip-text,
.tooltip-text:hover {
	visibility: visible;
	opacity: 1;
}

.tooltip-text a {
	color: var(--color-item-shadow);
	font-weight: var(--font-weight-standard);
	text-underline-offset: 0.2em;
}

.tooltip-text code,
.tooltip-text pre {
	font-weight: var(--font-weight-standard);
	cursor: text;
	word-break: break-word;
}

.tooltip-text a:hover {
	text-decoration-thickness: 2px;
}

.button {
	grid-row: span 2;
	place-self: center center;
	padding: 0.85rem 3rem;
	cursor: pointer;
	background: linear-gradient(180deg, #84fab0 0%, #8fd3f4 100%);
	border: 2px solid var(--color-item-shadow);
	box-shadow: 0.3rem 0.3rem 0 0 var(--color-item-shadow);
	border-radius: 1.3rem;
	font-size: 1.5rem;
	font-weight: var(--font-weight-standard);
	text-align: center;
	transition: all 0.1s ease-in;
}

.button:hover {
	transform: translate(-0.05rem, -0.05rem);
	box-shadow: 0.3em 0.3em;
	background: white;
	padding: 0.87rem 3.1rem;
}

.button:active {
	transform: translate(0.1em, 0.1em);
	box-shadow: 0.15em 0.15em;
	background: white;
	transition: all 0.03s ease-in;
	padding: 0.87rem 3.1rem;
}

